# DeepTrade

./: .gitignore  README.md  downloader.py  example_backtest.py  main.py  pyproject.toml  requirements.txt
backtesting/: __init__.py  engine.py  strategy.py
data/: __init__.py  data_interface.py  download.py  indicator.py  ohlcv_dataset.py  registry.py
model/: __init__.py  base_model.py  lstm.py  metrics.py  model_interface.py  registry.py  transformer.py
tests/: test_download.py  test_registry.py
