[project]
name = "deepxxZ"
version = "0.1.0"
description = ""
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "backtrader>=1.9.78",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "lxml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
